default theme and test plugin update

--- a/themes/default/theme_config.ini
+++ b/themes/default/theme_config.ini
@@ -6,7 +6,7 @@ skin		= "default"
 [defaults]
 html5		= true
 headjs		= true
-combinecss	= false
+combinecss	= true
 
 [framework]
 framework	= "bootstrap"
